# JARVIS-OS

./: .gitignore  README.md
docs/: arquitectura.md
fase-1-foundation/: .env.example  docker-compose.yml  pyproject.toml
fase-1-foundation/scripts/: init.sql
fase-1-foundation/shared/: __init__.py  config.py  logger.py
fase-1-foundation/tests/: test_config.py  test_logger.py
fase-2-core/: .env.example  config.py  pyproject.toml
fase-2-core/agentes/: __init__.py  jarvis.py
fase-2-core/agentes/herramientas/: __init__.py  memoria.py  vault.py  vault_rag.py
fase-2-core/api/: main.py
fase-2-core/frontend/: index.html
fase-2-core/memoria/: __init__.py  repositorio.py
fase-2-core/rag/: __init__.py  buscador.py  embeddings.py  indexador.py
fase-2-core/tests/: test_herramientas.py
