[project]
name = "jarvis-os-foundation"
version = "0.1.0"
description = "JARVIS-OS FASE 1 — Foundation: infrastructure, config, memory base"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.8.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.40",
    "redis[asyncio]>=5.3.0",
    "pgvector>=0.3.6",
    "python-dotenv>=1.1.0",
    "httpx>=0.28.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
